# rosmip

./: .gitignore  README.md
doc/: getting_started.md  hardware.md  simulation.md  smocap_demo.md
planar_sim/: Makefile  my_style.sty  my_utils.py  planar_mip.py  planar_mip.tex  test_robot_arm_ctl.py  test_robot_arm_plant_id.py
rosmip/rosmip_bringup/: CMakeLists.txt  package.xml
rosmip/rosmip_bringup/launch/: robot.launch
rosmip/rosmip_control/: CMakeLists.txt  package.xml  rosmip_control_plugin_legacy.xml  rosmip_control_plugins.xml  setup.py  setup_cpp_ext.py
rosmip/rosmip_control/config/: balancer.cfg  control.yaml  control_balance.yaml  control_legacy.yaml  control_legacy_rosmip_1.yaml  control_legacy_rosmip_2.yaml  control_legacy_rosmip_3.yaml  control_legacy_rosmip_4.yaml  control_none.yaml  teleop.yaml
rosmip/rosmip_control/config/rqt_multiplot/: debug.xml  debug_ctl.xml  debug_io.xml
rosmip/rosmip_control/include/rosmip_control/: dsm_interface.h  input_manager.h  legacy_ctl_law.h  publisher.h  rosmip_controller.h  rosmip_hardware_interface.h  rosmip_legacy_controller.h  sfb_ctl_law.h  state_estimation.h  tipping_monitor.h
rosmip/rosmip_control/launch/: control.launch  control_balance.launch  control_legacy.launch  control_none.launch  teleop.launch
rosmip/rosmip_control/msg/: debug.msg  msg_debug_ctl.msg  msg_debug_io.msg
rosmip/rosmip_control/scripts/: ident_planar_plant.py  ident_plant.py  ident_plant_2.py  record_debug_io.py  test_cpp_ext.py  test_ctl_on_planar_sim.py  test_sfb_ctl_on_ann.py
rosmip/rosmip_control/src/: .#rosmip_dummy_controller.cpp  input_manager.cpp  legacy_ctl_law.cpp  publisher.cpp  rosmip_controller.cpp  rosmip_controller_legacy.cpp  rosmip_dummy_controller.cpp  rosmip_hardware_interface.cpp  sfb_ctl_law.cpp  state_estimation.cpp  tipping_monitor.cpp
rosmip/rosmip_control/src/rosmip_control/: planar_control.py  planar_sim_simple.py  rosmip_control.pyx
rosmip/rosmip_description/: CMakeLists.txt  package.xml
rosmip/rosmip_description/launch/: description.launch
rosmip/rosmip_description/meshes/: ir_marker.blend  ir_marker.dae  minion.blend  wheel_60.dae  wheel_test.dae
rosmip/rosmip_description/urdf/: inertias.urdf.xacro  rosmip.gazebo  rosmip.urdf.xacro  rosmip_1.urdf.xacro  rosmip_2.urdf.xacro  rosmip_3.urdf.xacro  rosmip_4.urdf.xacro  rosmip_defaults.urdf.xacro
rosmip/rosmip_navigation/: CMakeLists.txt  package.xml
rosmip/rosmip_navigation/config/: pure_pursuit_gazebo.yaml
rosmip/rosmip_navigation/launch/: demo_pure_pursuit.launch  demo_pure_pursuit_z.launch  enac_bench_demo_pure_pursuit.launch  move_base_demo.launch  odom_map_navigation_demo.launch  odom_navigation_demo.launch  robot_localization_ekf.launch  static_map_navigation_demo.launch
rosmip/rosmip_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  ekf.yaml  ekf_smocap.yaml
rosmip/rosmip_navigation/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
rosmip/rosmip_navigation/params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
rosmip/rosmip_navigation/scripts/: fake_localization.py  send_movebase_goal.py  test_controller.py  test_odometry.py
rosmip/rosmip_worlds/: CMakeLists.txt  package.xml
rosmip/rosmip_worlds/maps/: maze_0.yaml  maze_1.yaml  maze_2.yaml  track_circle_01.yaml  track_empty.yaml  track_empty_dual.yaml  track_ethz.yaml  track_ethz_2.yaml  track_ethz_2_costmap.yaml  track_ethz_4.yaml  track_ethz_4_costmap.yaml  track_ethz_dual.yaml  track_oval_01.yaml
rosmip/rosmip_worlds/maps/enac_bench/: maze_01.yaml  track_test2.yaml  track_test2_costmap.yaml
rosmip/rosmip_worlds/mazes/: maze_0.xml  maze_1.xml  maze_2.xml
rosmip/rosmip_worlds/scripts/: make_ethz_map.py  make_maze.py
rosmip/rosmip_worlds/worlds/: empty.world  maze_0.world  maze_1.world  maze_2.world
rosmip_desktop/rosmip_viz/: CMakeLists.txt  package.xml
rosmip_desktop/rosmip_viz/launch/: view_model.launch  view_navigation.launch  view_robot.launch
rosmip_desktop/rosmip_viz/rviz/: map_navigation.rviz  model.rviz  navigation.rviz  odom.rviz  odom_navigation.rviz  pure_pursuit.rviz  smocap.rviz  two_robots_pure_pursuit.rviz
rosmip_simulator/rosmip_gazebo/: CMakeLists.txt  package.xml
rosmip_simulator/rosmip_gazebo/launch/: rosmip_world.launch
rosmip_simulator/rosmip_gazebo/models/rosmip_ground_plane/: model.config  model.sdf
rosmip_simulator/rosmip_gazebo/worlds/: empty.world
rosmip_simulator/rosmip_gazebo_control/: CMakeLists.txt  package.xml  rosmip_hardware_interface_gazebo.xml
rosmip_simulator/rosmip_gazebo_control/include/rosmip_gazebo_control/: rosmip_hardware_interface_gazebo.h
rosmip_simulator/rosmip_gazebo_control/src/: rosmip_hardware_interface_gazebo.cpp
rosmip_simulator/rosmip_gazebo_demos/: CMakeLists.txt  package.xml
rosmip_simulator/rosmip_gazebo_demos/launch/: move_base_demo.launch  odom_map_navigation_demo.launch  odom_navigation_demo.launch  one_robot_in_z_room.launch  pure_pursuit_demo.launch  static_map_demo.launch  static_map_fake_loc_demo.launch  static_map_navigation_demo.launch  two_robots_in_z_room.launch  two_robots_in_z_room_pp_demo.launch
rosmip_simulator/rosmip_sim_control/: CMakeLists.txt  package.xml
rosmip_simulator/rosmip_sim_control/scripts/: test.py
