<?xml version="1.0"?>
<package>
  <name>rosmip_gazebo_control</name>
  <version>0.0.0</version>
  <description>The rosmip_gazebo_control package</description>

  <maintainer email="poinix@gmail.xml">poine</maintainer>

  <license>GPLv3</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rosmip_gazebo_control</url> -->

  <author email="poinix@gmail.com">Antoine Drouin</author> -->

  <build_depend>gazebo_ros_control</build_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <gazebo_ros_control plugin="${prefix}/rosmip_hardware_interface_gazebo.xml"/>
  </export>
</package>
